[Add] date click function

--- a/js_calendar/index.html
+++ b/js_calendar/index.html
@@ -1,1 +1,13 @@
-<div id="calendar"></div>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+    <body>
+      <button id="prev" type="button">前の月</button>
+      <button id="next" type="button">次の月</button>
+      <div id="calendar"></div>
+      <script type="text/javascript" src="index.js"></script>
+    </body>
+  </head>
+</html>
